--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,7 @@ header {
   border-bottom: 2px dashed @navigation-border;
 
   .header-nav {
-    height: auto;
+    height: 8vh;
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
