--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,6 @@
 // Navigation Styles here
 nav {
-  margin-left: 28%;
+  margin-left: 46%;
   display: flex;
   justify-content: space-between;
   align-items: center;
